working on votes,add button,text vote , scrolling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -496,6 +496,7 @@
     <string name="share">Share</string>
     <string name="username">Username</string>
     <string name="discover">Discover <b>+</b></string>
+    <string name="scroll_banner">Scroll Banners <b>+</b></string>
     <string name="recordedlive">Recorded live</string>
     <string name="my_gifts">My Gifts</string>
     <string name="gallery">Gallery</string>
