--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -685,4 +685,8 @@
     <string name="purchase_votes">Purchase votes</string>
     <string name="invite_page">Add Bingg Bongg referral link for a member to copy and paste it to their other social media accounts for referral.</string>
     <string name="referral_details">Copy the link above and paste it on all your other social media platforms and get (100) votes as a bonus for each member you sign up with this link and turn all your votes into cash $$$</string>
+    <string name="flip_camera">Flip Camera</string>
+    <string name="start_timer">Start Timer</string>
+    <string name="add_filter">Add Filter</string>
+    <string name="upload_sound">Upload Sound</string>
 </resources>
