--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -694,4 +694,5 @@
     <string name="start_timer">Start Timer</string>
     <string name="add_filter">Add Filter</string>
     <string name="upload_sound">Upload Sound</string>
+    <string name="hideorshowallicons">Hide or Show all i-cons</string>
 </resources>
